; ModuleID = '/home/carl/AnghaBench/freebsd/sys/amd64/amd64/extr_pmap.c_pmap_activate_sw_pcid_invpcid_pti.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/amd64/amd64/extr_pmap.c_pmap_activate_sw_pcid_invpcid_pti.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.thread*, i32, i32)* @pmap_activate_sw_pcid_invpcid_pti to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pmap_activate_sw_pcid_invpcid_pti(%struct.thread* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.thread*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.thread* %0, %struct.thread** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* %6, align 4
  %9 = call i32 @pmap_activate_sw_pcid_pti(i32 %7, i32 %8, i32 1)
  %10 = load %struct.thread*, %struct.thread** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @pmap_activate_sw_pti_post(%struct.thread* %10, i32 %11)
  ret void
}

declare dso_local i32 @pmap_activate_sw_pcid_pti(i32, i32, i32) #1

declare dso_local i32 @pmap_activate_sw_pti_post(%struct.thread*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
